iptables.up.rules
# Generated by iptables-save v1.6.0 on Wed Mar  3 13:47:41 2021
*nat
:PREROUTING ACCEPT [113:8896]
:INPUT ACCEPT [44:3902]
:OUTPUT ACCEPT [15:1104]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 10.0.0.0/24 -j SNAT --to-source 191.252.181.226
-A POSTROUTING -o venet0:0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Mar  3 13:47:41 2021
# Generated by iptables-save v1.6.0 on Wed Mar  3 13:47:41 2021
*filter
:INPUT ACCEPT [375:56743]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [198:20749]
:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -i venet0:0 -p udp -m multiport --dports 53 -j ACCEPT
-A INPUT -i dns0 -j ACCEPT
-A FORWARD -i dns0 -o venet0:0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i venet0:0 -o dns0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o dns0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i dns0 -o eth0 -j ACCEPT
-A OUTPUT -o venet0:0 -p udp -m multiport --dports 53 -j ACCEPT
-A OUTPUT -o dns0 -j ACCEPT
-A f2b-sshd -j RETURN
COMMIT
# Completed on Wed Mar  3 13:47:41 2021
